<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashbboard"
    android:focusable="true"
    android:contentDescription="@string/dashboard"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/contacts"
        android:contentDescription="@string/contacts"
        android:padding="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dial"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/dial_number"
        android:contentDescription="@string/dial"
        android:layout_below="@+id/contacts"
        android:padding="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messages"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/message"
        android:contentDescription="@string/messages"
        android:layout_below="@+id/dial_number"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/battery_msg"
        android:contentDescription="@string/battery"
        android:layout_below="@+id/message"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surroundings"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/surroundings"
        android:contentDescription="@string/battery"
        android:layout_below="@+id/battery_msg"
        android:padding="10dp"/>


</RelativeLayout>