<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Message_and_Dial"
    android:padding="16dp"
    android:focusable="true"
    android:orientation="vertical"
    android:contentDescription="@string/choose_contact_action">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/call_contact"
        android:background="@color/colorPrimary"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#FFF"
        android:id="@+id/call_contact"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/msg_contact"
        android:background="@color/colorPrimary"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#FFF"
        android:id="@+id/msg_contact"
        android:layout_marginTop="20dp"/>
</LinearLayout>