<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:focusable="true">

   <TextView
       android:id="@+id/welcome_text"
       android:contentDescription="@string/welcome_to"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/welcome_to"
       android:textColor="@color/colorPrimary"
       android:textSize="30sp"
       android:textStyle="bold"
       android:textAllCaps="false"
       android:layout_above="@+id/app_name"
       android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/app_name"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_centerInParent="true"/>

    <ImageView
        android:id="@+id/mic"
        android:contentDescription="@string/mic_speak"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_mic_black_24dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>